--- a/ServerPingWebsocket/package.json
+++ b/ServerPingWebsocket/package.json
@@ -32,6 +32,7 @@
     "@middleware": "middleware",
     "@routes": "routes",
     "@logger": "startup/logging",
-    "@startup": "startup"
+    "@startup": "startup",
+    "@model": "model"
   }
 }
