--- a/ServerPingWebsocket/package.json
+++ b/ServerPingWebsocket/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "joi": "^14.3.1",
+    "lodash": "^4.17.15",
     "module-alias": "^2.2.2",
     "path": "^0.12.7",
     "socket.io": "^2.3.0",
