update log info

--- a/ServerPingWebsocket/package.json
+++ b/ServerPingWebsocket/package.json
@@ -40,6 +40,7 @@
     "@services": "services"
   },
   "jest": {
+    "testEnvironment": "node",
     "moduleNameMapper": {
       "@utils/(.*)": "<rootDir>/utils/$1",
       "@middleware/(.*)": "<rootDir>/middleware/$1",
