--- a/ServerPingWebsocket/package.json
+++ b/ServerPingWebsocket/package.json
@@ -22,6 +22,7 @@
     "module-alias": "^2.2.2",
     "path": "^0.12.7",
     "socket.io": "^2.3.0",
+    "tail-stream": "^0.3.4",
     "util": "^0.12.3",
     "winston": "^3.2.1"
   },
