--- a/ServerPingWebsocket/package.json
+++ b/ServerPingWebsocket/package.json
@@ -23,6 +23,7 @@
     "path": "^0.12.7",
     "socket.io": "^2.3.0",
     "tail-stream": "^0.3.4",
+    "tar": "^6.0.2",
     "util": "^0.12.3",
     "winston": "^3.2.1"
   },
