--- a/ServerPingWebsocket/package.json
+++ b/ServerPingWebsocket/package.json
@@ -25,7 +25,8 @@
     "tail-stream": "^0.3.4",
     "tar": "^6.0.2",
     "util": "^0.12.3",
-    "winston": "^3.2.1"
+    "winston": "^3.2.1",
+    "yargs": "^15.4.1"
   },
   "devDependencies": {
     "jest": "^26.0.1",
