--- a/DailyChallenge/ReplicationAndSharding/package.json
+++ b/DailyChallenge/ReplicationAndSharding/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-xray-sdk": "^3.1.0",
     "axios": "^0.19.2",
     "crypto-js": "^4.0.0",
     "express": "^4.17.1"
