--- a/ServerPingWebsocket/package.json
+++ b/ServerPingWebsocket/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-xray-sdk": "^3.1.0",
     "axios": "^0.19.2",
     "config": "^3.3.1",
     "cors": "^2.8.5",
