--- a/ServerPingWebsocket/package.json
+++ b/ServerPingWebsocket/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@stomp/stompjs": "^5.4.4",
     "axios": "^0.19.2",
     "config": "^3.3.1",
     "cors": "^2.8.5",
@@ -25,7 +26,9 @@
     "tail-stream": "^0.3.4",
     "tar": "^6.0.2",
     "util": "^0.12.3",
+    "uuid": "^8.3.0",
     "winston": "^3.2.1",
+    "ws": "^7.3.1",
     "yargs": "^15.4.1"
   },
   "devDependencies": {
