--- a/ServerPingWebsocket/package.json
+++ b/ServerPingWebsocket/package.json
@@ -19,6 +19,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "joi": "^14.3.1",
+    "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.15",
     "module-alias": "^2.2.2",
     "path": "^0.12.7",
