--- a/ReactjsServerPingWebSocket/serverpingwebsocketgui/package.json
+++ b/ReactjsServerPingWebSocket/serverpingwebsocketgui/package.json
@@ -6,9 +6,11 @@
     "@material-ui/core": "^4.11.0",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "^4.0.0-alpha.56",
+    "@stomp/stompjs": "^5.4.4",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
+    "axios": "^0.20.0",
     "bootstrap": "^4.5.0",
     "font-awesome": "^4.7.0",
     "lodash": "^4.17.19",
